# rag_custom

./: .gitignore  README.md  pyproject.toml
app/: config.py  get_answer.py  llm_expand_answer.py  main.py
app/core/: config.py
app/db/: db.py
app/embeddings/: adapter_embedding.py
app/extract_data/: get_doc_chunks.py  sep_elems.py  summaries_data.py  utils.py
app/ingestion/: extract_elements.py  parser.py  pipeline.py
app/llm/: chains.py  models.py  preprocess.py  prompts.py
app/repository/: embeddings.py  storage.py
app/retrieval/: get_elements.py
app/utils/: download_file.py  singleton.py
